updated index file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="#" class="btn">Discover Now</a>
       </div>
       <div class="hero-image">
-        <img src="hero.png" alt="Travel Hero">
+        <img src="images/hero.png" alt="Travel Hero">
       </div>
     </div>
   </section>
@@ -43,9 +43,18 @@
     <div class="container">
       <h2>Things you need to do</h2>
       <div class="card-grid">
-        <div class="card">Flight Booking</div>
-        <div class="card">Hotel & Resort</div>
-        <div class="card">Travel Insurance</div>
+        <div class="card">
+          <img src="images/flight.png" alt="Flight Booking">
+          <h3>Flight Booking</h3>
+        </div>
+        <div class="card">
+          <img src="images/hotel.png" alt="Hotel & Resort">
+          <h3>Hotel & Resort</h3>
+        </div>
+        <div class="card">
+          <img src="images/insurance.png" alt="Travel Insurance">
+          <h3>Travel Insurance</h3>
+        </div>
       </div>
     </div>
   </section>
@@ -55,10 +64,26 @@
     <div class="container">
       <h2>Exclusive <span>deals & discounts</span></h2>
       <div class="card-grid">
-        <div class="card">Deal 1</div>
-        <div class="card">Deal 2</div>
-        <div class="card">Deal 3</div>
-        <div class="card">Deal 4</div>
+        <div class="card">
+          <img src="images/deal1.jpg" alt="Deal 1">
+          <h3>Paris</h3>
+          <p>Starting from $499</p>
+        </div>
+        <div class="card">
+          <img src="images/deal2.jpg" alt="Deal 2">
+          <h3>London</h3>
+          <p>Starting from $599</p>
+        </div>
+        <div class="card">
+          <img src="images/deal3.jpg" alt="Deal 3">
+          <h3>Dubai</h3>
+          <p>Starting from $399</p>
+        </div>
+        <div class="card">
+          <img src="images/deal4.jpg" alt="Deal 4">
+          <h3>Singapore</h3>
+          <p>Starting from $699</p>
+        </div>
       </div>
     </div>
   </section>
@@ -68,9 +93,18 @@
     <div class="container">
       <h2>Best <span>vacation plans</span></h2>
       <div class="card-grid">
-        <div class="card">Plan 1</div>
-        <div class="card">Plan 2</div>
-        <div class="card">Plan 3</div>
+        <div class="card">
+          <img src="images/plan1.jpg" alt="Plan 1">
+          <h3>Bali Adventure</h3>
+        </div>
+        <div class="card">
+          <img src="images/plan2.jpg" alt="Plan 2">
+          <h3>Swiss Alps</h3>
+        </div>
+        <div class="card">
+          <img src="images/plan3.jpg" alt="Plan 3">
+          <h3>Thailand Escape</h3>
+        </div>
       </div>
     </div>
   </section>
@@ -79,7 +113,10 @@
   <section class="testimonials">
     <div class="container">
       <h2>What people say <span>about us</span></h2>
-      <div class="card">Customer Review</div>
+      <div class="card">
+        <img src="images/user1.jpg" alt="Customer">
+        <p>"Amazing trip! Everything was well planned."</p>
+      </div>
     </div>
   </section>
 
@@ -88,9 +125,18 @@
     <div class="container">
       <h2>Get update with <span>latest blog</span></h2>
       <div class="card-grid">
-        <div class="card">Blog 1</div>
-        <div class="card">Blog 2</div>
-        <div class="card">Blog 3</div>
+        <div class="card">
+          <img src="images/blog1.jpg" alt="Blog 1">
+          <h3>Top 10 beaches to visit</h3>
+        </div>
+        <div class="card">
+          <img src="images/blog2.jpg" alt="Blog 2">
+          <h3>How to travel on a budget</h3>
+        </div>
+        <div class="card">
+          <img src="images/blog3.jpg" alt="Blog 3">
+          <h3>Best foods around the world</h3>
+        </div>
       </div>
     </div>
   </section>
