--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
       <h2>Exclusive <span>deals & discounts</span></h2>
       <div class="card-grid">
         <div class="card">
-          <img src="images/deal1.jpg" alt="Deal 1">
+          <img src="images/deal1.png" alt="Deal 1">
           <h3>Paris</h3>
           <p>Starting from $499</p>
         </div>
         <div class="card">
-          <img src="images/deal2.jpg" alt="Deal 2">
+          <img src="images/deal2.png" alt="Deal 2">
           <h3>London</h3>
           <p>Starting from $599</p>
         </div>
         <div class="card">
-          <img src="images/deal3.jpg" alt="Deal 3">
+          <img src="images/deal3.png" alt="Deal 3">
           <h3>Dubai</h3>
           <p>Starting from $399</p>
         </div>
         <div class="card">
-          <img src="images/deal4.jpg" alt="Deal 4">
+          <img src="images/deal4.png" alt="Deal 4">
           <h3>Singapore</h3>
           <p>Starting from $699</p>
         </div>
@@ -94,15 +94,15 @@
       <h2>Best <span>vacation plans</span></h2>
       <div class="card-grid">
         <div class="card">
-          <img src="images/plan1.jpg" alt="Plan 1">
+          <img src="images/plan1.png" alt="Plan 1">
           <h3>Bali Adventure</h3>
         </div>
         <div class="card">
-          <img src="images/plan2.jpg" alt="Plan 2">
+          <img src="images/plan2.png" alt="Plan 2">
           <h3>Swiss Alps</h3>
         </div>
         <div class="card">
-          <img src="images/plan3.jpg" alt="Plan 3">
+          <img src="images/plan3.png" alt="Plan 3">
           <h3>Thailand Escape</h3>
         </div>
       </div>
@@ -114,7 +114,7 @@
     <div class="container">
       <h2>What people say <span>about us</span></h2>
       <div class="card">
-        <img src="images/user1.jpg" alt="Customer">
+        <img src="images/user1.png" alt="Customer">
         <p>"Amazing trip! Everything was well planned."</p>
       </div>
     </div>
@@ -126,15 +126,15 @@
       <h2>Get update with <span>latest blog</span></h2>
       <div class="card-grid">
         <div class="card">
-          <img src="images/blog1.jpg" alt="Blog 1">
+          <img src="images/blog1.png" alt="Blog 1">
           <h3>Top 10 beaches to visit</h3>
         </div>
         <div class="card">
-          <img src="images/blog2.jpg" alt="Blog 2">
+          <img src="images/blog2.png" alt="Blog 2">
           <h3>How to travel on a budget</h3>
         </div>
         <div class="card">
-          <img src="images/blog3.jpg" alt="Blog 3">
+          <img src="images/blog3.png" alt="Blog 3">
           <h3>Best foods around the world</h3>
         </div>
       </div>
