--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <div class="brand">
         <img src="images/logo.png" alt="Logo" class="logo" />
-        <span class="brand-name">Travelly</span>
+        <span class="brand-name">Trabook</span>
       </div>
 
       <nav class="nav">
@@ -241,7 +241,7 @@
     </div>
 
     <div class="container copyright">
-      <p>© 2025 Travelly. All rights reserved.</p>
+      <p>© 2025 Trabook. All rights reserved.</p>
     </div>
   </footer>
 
