Updated index file

--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
   <footer class="site-footer">
     <div class="container footer-inner">
       <div class="footer-col">
+        <span class="brand-name">Trabook</span>
         <img src="images/logo.png" alt="logo" class="logo-sm" />
-        <p>Travelly — reliable, traditional travel planning with modern convenience.</p>
+        <p>Trabook — reliable, traditional travel planning with modern convenience.</p>
       </div>
 
       <div class="footer-col">
