Updated index  file

--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
     <div class="container features-grid">
       <article class="feature">
         <img src="images/flight.png" alt="Flight" />
-        <h3>Flight Booking</h3>
-        <p>Search & compare multiple airlines in seconds.</p>
+        <h3>Sign Up</h3>
+        <p>Completes all the worl associated with planning and processing</p>
       </article>
 
       <article class="feature">
         <img src="images/hotel.png" alt="Hotel" />
-        <h3>Hotel & Resort</h3>
-        <p>Handpicked stays with flexible cancellation.</p>
+        <h3>Worth of Money</h3>
+        <p>After successful access then book from exclusive deals & pricing</p>
       </article>
 
       <article class="feature">
         <img src="images/insurance.png" alt="Insurance" />
-        <h3>Travel Insurance</h3>
-        <p>Reliable coverage so you travel with confidence.</p>
+        <h3>Exciting Travel</h3>
+        <p>Start and explore a wide range of exciting travel experience</p>
       </article>
     </div>
   </section>
